# chat

./: .gitignore  AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CServer.hpp  ConfigMgr.hpp  HttpConnection.cpp  HttpConnection.hpp  LogicSystem.cpp  LogicSystem.h  LogicSystem.hpp  MysqlDao.hpp  MysqlMgr.cpp  README.md  RedisMgr.hpp  Singleten.h  VerifyGrpcClient.cpp  VerifyGrpcClient.hpp  const.h  main.cpp  message.pb.cc
include/: MysqlMgr.hpp  const.h  message.grpc.pb.h  message.pb.h
server/ChatServer/: CMakeLists.txt
server/ChatServer/include/: AsioIOServicePool.hpp  HttpConnection.hpp  Logger.hpp  LogicSystem.hpp  MysqlMgr.hpp  StatusGrpcClient.hpp  const.h  message.grpc.pb.h
server/ChatServer/src/: ConfigMgr.cpp  HttpConnection.cpp  Logger.cpp  LogicSystem.cpp  message.grpc.pb.cpp
server/GateServer/: message.proto
server/GateServer/include/: ConfigMgr.hpp  message.pb.h
server/GateServer/src/: MysqlMgr.cpp  main.cpp  message.pb.cpp
src/: LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp  main.cpp  message.grpc.pb.cpp
